Fix broken homepage mobile layout by preventing horizontal overflow

--- a/_sass/components/_homepage.scss
+++ b/_sass/components/_homepage.scss
@@ -72,6 +72,10 @@
     justify-content: start;
     align-items: center;
     flex-direction: row;
+    @media (min-width: 421px) and (max-width: 991px) {
+      align-items: start;
+      flex-wrap: wrap;
+    }
     @media (max-width: $breakpoint-s) {
       margin-top: 1em;
       align-items: start;
@@ -79,6 +83,12 @@
     }
     .feature {
       margin: 0 2em;
+      @media (min-width: 421px) and (max-width: 991px) {
+        box-sizing: border-box;
+        margin: 0 0 2em 0;
+        padding: 0 1em;
+        width: 50%;
+      }
       @media (max-width: $breakpoint-s) {
         margin: 0 0 2em 0;
       }
